--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,12 @@
 * {
     border: 1px solid;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-
+@font-face {
+    font-family: titleFont;
+    src: url(images/Norse-Bold.otf);
+}
 
 .container,
 .logo,
@@ -11,8 +15,28 @@
     justify-content: center;
 }
 
+.container {
+    
+}
 
+.logo-bar {
+    background-color: rgba(0, 0, 0, 0.799);
+    position: absolute;
+    top: 50px;
+
+}
+
+.title {
+    font-family: titleFont;
+    color: rgb(255, 255, 255);
+}
 .picture {
     width: 100%;
 
+}
+
+.img-footer {
+    position: absolute;
+    bottom: 100px;
+    color: aliceblue;
 }
