--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 * {
     border: 1px solid;
+    box-sizing: border-box;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
@@ -9,52 +10,79 @@
 }
 
 .container,
-.logo,
+.logo-bar,
 .form,
 body {
     display: flex;
     justify-content: center;
+    margin: 0;
+    padding: 0;
 }
 
 .container {
     width: 80%;
+    height: 100vh;
+    
+}
+
+.left-side {
+    display: flex;
+    flex-direction: column;
+    flex: 3;
+    background-image: url(images/halie-west-25xggax4bSA-unsplash.jpg);
+    background-position: center center;
+    background-size: cover;
+
 }
 
 .logo-bar {
     background-color: rgba(0, 0, 0, 0.674);
-    position: absolute;
-    top: 200px;
-    height: 140px;
-
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 150px;
+    margin-top: 20vh;
+    width: 100%;
+    gap: 20px;
 }
 
 .title {
     font-family: titleFont;
     color: rgb(255, 255, 255);
-    font-size: 52px;
+    font-size: 6rem;
 }
 
-.picture,
-.logo-bar,
-.left-side {
-    width: 600px;
 
+.picture {
+    max-width: 100%;
+    height: auto;
 }
 
-.left-side {
-    margin-right: 50px;
-}
 
-.img-footer {
-    position: absolute;
-    bottom: 30px;
-    left: 350px;
-    color: rgb(254, 254, 254);
+.left-footer {
+    
+    color: rgb(251, 251, 251);
+    width: 100%;
+    text-align: center;
+    margin-top: 97%;
+
 }
 
 .logo {
-    height: 130px;
+    height: 130px; 
 }
+
+.right-side {
+    display: flex;
+    flex-direction: column;
+    flex: 5;
+    margin-left: 40px;
+}
+
+.text {
+    
+}
+
 
 .form {
     background-color: rgb(130, 197, 255);
