--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 * {
-    border: 1px solid;
+    
     box-sizing: border-box;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
@@ -11,7 +11,6 @@
 
 .container,
 .logo-bar,
-.form,
 body {
     display: flex;
     justify-content: center;
@@ -80,27 +79,45 @@ body {
     display: flex;
     flex-direction: column;
     flex: 5;
-    margin-left: 40px;
+    margin: 50px 0 0 0;
+    padding-left: 40px;
+
+}
+
+.form {
+    display: flex;
+    justify-content: left;
+    flex-direction: column;
+    margin: 0;
+    padding: 0;
+    background-color: rgb(241, 255, 233);
+    width: 90%;
+    height: 30%;
+    margin: 60px 0 30px 0;
+    gap: 20px;
+}
+
+.form-bot {
+    display: flex;
+    gap: 80px;
+}
+
+.form-left {
+    margin-left: 30px;
 }
 
 .text {
     font-size: 1.5rem;
     max-width: 80%;
-    margin: 60px 0 25px 0;
     font-weight: bold;
-}
-
-
-.form {
-    background-color: rgb(164, 246, 87);
-    height: 30%;
+    margin: 60px 0 0 0;
 }
 
 .button {
     background-color: rgb(72, 106, 58);
     font-size: 1.2rem;
     color: rgb(250, 253, 255);
-    margin: 25px 0 30px 10px;
+    margin: 25px 0 10px 10px;
     width: 200px;
     height: 40px;
     border-radius: 5px;
@@ -112,6 +129,38 @@ body {
     
 }
 
+button:hover {
+    background-color: rgb(94, 140, 75);
+}
+
+.form-left,
+.form-right {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    justify-content: center;
+    width: 30%;
+}
+
+input {
+    width: 100%;
+    height: 1.5rem;
+}
+
+h3 {
+    font-weight: bold;
+    font-size: 1.4rem;
+    margin-top: 0;
+    margin-left: 30px;
+    margin-bottom: 10px;
+}
+
+label {
+    display: block;
+    font-size: 0.7rem;
+    font-weight: 700;
+}
+
 .button-text a {
     color: rgb(72, 106, 58);
 }
@@ -119,3 +168,4 @@ body {
 a {
     color: inherit;
 };
+
